<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserMenuFragment">

    <TextView
        android:id="@+id/userMenuWelcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:textSize="28sp"
        android:text="@string/user_menu_welcome_text"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/userMenuViewBalanceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/userMenuViewBalanceButton"
        android:layout_width="240dp"
        android:layout_height="65dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="17dp"
        android:text="@string/user_menu_view_balance_button_text"
        app:layout_constraintBottom_toTopOf="@+id/userMenuTransferFundsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userMenuWelcomeTextView" />

    <Button
        android:id="@+id/userMenuTransferFundsButton"
        android:layout_width="240dp"
        android:layout_height="65dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="17dp"
        android:text="@string/user_menu_transfer_funds_button_text"
        app:layout_constraintBottom_toTopOf="@+id/userMenuExchangeCalculatorButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userMenuViewBalanceButton" />

    <Button
        android:id="@+id/userMenuExchangeCalculatorButton"
        android:layout_width="240dp"
        android:layout_height="65dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="17dp"
        android:text="@string/user_menu_exchange_calculator_button_text"
        app:layout_constraintBottom_toTopOf="@+id/userMenuPayBillsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userMenuTransferFundsButton" />

    <Button
        android:id="@+id/userMenuPayBillsButton"
        android:layout_width="240dp"
        android:layout_height="65dp"
        android:layout_marginTop="17dp"
        android:text="@string/user_menu_pay_bills_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userMenuExchangeCalculatorButton" />

</androidx.constraintlayout.widget.ConstraintLayout>