<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransferFundsFragment">

    <EditText
        android:id="@+id/transferFundsAccountEditText"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/transfer_funds_account_edit_text_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/transferFundsAmountEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/transferFundsAmountEditText"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/transfer_funds_amount_edit_text_hint"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/transferFundsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transferFundsAccountEditText" />

    <Button
        android:id="@+id/transferFundsButton"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/transfer_funds_button_text"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transferFundsAmountEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>